--- a/collatz_calculus.tex
+++ b/collatz_calculus.tex
@@ -7264,7 +7264,7 @@ Then \(F(p,m)=2^{1+6p}m+\frac{11\cdot 64^{\,p}-2}{9}\) and the lemma yields \(3x
 \newpage
 \section*{Appendix F: Code and Data Availability}
 A reference implementation of the unified inverse table, the word evaluator, and the example generators is archived at
-\href{https://doi.org/10.5281/zenodo.17352096}{Zenodo DOI: 10.5281/zenodo.17352096} and mirrored at
+\href{https://doi.org/ DOI: 10.5281/zenodo.17899353}{Zenodo DOI: 10.5281/zenodo.17899353} and mirrored at
 \href{git@github.com:kisira/collatz.git}{github.com/kisira/collatz}.
 %The repository includes scripts to verify per-step identities \(U(x')=x\), regenerate the witness tables (mod \(24,48,96\)), and reproduce the figures and traces in this paper.
 %Reproducibility instructions are summarized in Appendix~\ref{app:repro}.
