--- a/collatz_calculus.tex
+++ b/collatz_calculus.tex
@@ -1790,7 +1790,9 @@ python reverse_construct.py --mode chain --y 497 --stop 1 --csv chain_497_to_1.c
 
 
 \paragraph{Archival guarantee.}
-The Zenodo snapshot (DOI above) freezes the exact source corresponding to tag \texttt{v1.0} and commit \texttt{<hash>}, ensuring long-term reproducibility even if the development branch evolves.
+A reference implementation of the unified inverse table, the word evaluator, and the example generators is archived at
+\href{https://doi.org/ 10.5281/zenodo.17905002}{Zenodo DOI: 10.5281/zenodo.17905002} and mirrored at
+\href{git@github.com:kisira/collatz.git}{github.com/kisira/collatz}.
 
 \section*{Appendix H: Formalization Index}
 The logical core of this paper has been mechanically verified in the Coq Proof Assistant. The formalization covers the algebraic foundations, the dynamical properties (drift, expansion), and the algorithmic construction (steering, lifting).
